--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,7 @@
     "require": {
         "php": ">=5.6.4",
         "laravel/framework": "5.3.*",
-        "irazasyed/telegram-bot-sdk": "^2.0",
-        "elibyy/tcpdf-laravel": "^5.3"
+        "irazasyed/telegram-bot-sdk": "^2.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
