--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,9 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
-        "laravel/framework": "5.3.*",
         "irazasyed/telegram-bot-sdk": "^2.0",
-        "paragonie/random_compat": "1.2.*"
+        "laravel/framework": "5.3.*",
+        "paragonie/random_compat": "^2.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
